tree-sitter/test/corpus/gk26.txt
==================
gk26 full example
==================
Personen: 26
Starttag: 2026-04-02
Donnerstag: [[Tagliatelle mit Auberginensugo]]
Freitag: [[Standartfrühstück]], [[Gebratene Maultaschen]], [[Brownies]], [[Curry]]
Samstag: [[Standartfrühstück]], [[Käsespätzle]], ⟨Einkauf⟩ [[Vegi Bolognese]]
Sonntag: [[Armer Ritter]], [[Spinatrisotto mit Nusspilzen]], [[Mousse au chocolate]], [[Semmelknödel Rotkraut Bratensoße]]
Montag: [[Standartfrühstück]], [[Bohneneintopf mit Kartoffeln]], [[Mie Nudeln]]
Dienstag: [[Standartfrühstück]], [[Hotdogs]], [[Obstsalat]], [[Gnocci-vegan]] ⟨Einkauf⟩
Mittwoch: [[Brunch]], [[Kuchenbuffet]], [[Linsendahl]]
Donnerstag: [[Standartfrühstück]], [[Wraps mit Gyros]], [[Schupfnudeln mit Sauerkraut]]
Freitag: [[Kaiserschmarn]], [[Chili sin Cane]], [[Obst + Kekse]], [[Abschlussbuffet]]
Samstag: Reste
Sonntag: Reste

---

(source_file
  (persons_line count: (integer))
  (starttag_line date: (date))
  (day_line
    day: (day_with_count name: (day_name))
    (menu (menu_items (menu_item (dish_with_count dish: (dish))))))
  (day_line
    day: (day_with_count name: (day_name))
    (menu (menu_items
      (menu_item (dish_with_count dish: (dish)))
      (menu_item (dish_with_count dish: (dish)))
      (menu_item (dish_with_count dish: (dish)))
      (menu_item (dish_with_count dish: (dish))))))
  (day_line
    day: (day_with_count name: (day_name))
    (menu (menu_items
      (menu_item (dish_with_count dish: (dish)))
      (menu_item (dish_with_count dish: (dish)))
      (menu_item (shopping_marker))
      (menu_item (dish_with_count dish: (dish))))))
  (day_line
    day: (day_with_count name: (day_name))
    (menu (menu_items
      (menu_item (dish_with_count dish: (dish)))
      (menu_item (dish_with_count dish: (dish)))
      (menu_item (dish_with_count dish: (dish)))
      (menu_item (dish_with_count dish: (dish))))))
  (day_line
    day: (day_with_count name: (day_name))
    (menu (menu_items
      (menu_item (dish_with_count dish: (dish)))
      (menu_item (dish_with_count dish: (dish)))
      (menu_item (dish_with_count dish: (dish))))))
  (day_line
    day: (day_with_count name: (day_name))
    (menu (menu_items
      (menu_item (dish_with_count dish: (dish)))
      (menu_item (dish_with_count dish: (dish)))
      (menu_item (dish_with_count dish: (dish)))
      (menu_item (dish_with_count dish: (dish)))
      (menu_item (shopping_marker)))))
  (day_line
    day: (day_with_count name: (day_name))
    (menu (menu_items
      (menu_item (dish_with_count dish: (dish)))
      (menu_item (dish_with_count dish: (dish)))
      (menu_item (dish_with_count dish: (dish))))))
  (day_line
    day: (day_with_count name: (day_name))
    (menu (menu_items
      (menu_item (dish_with_count dish: (dish)))
      (menu_item (dish_with_count dish: (dish)))
      (menu_item (dish_with_count dish: (dish))))))
  (day_line
    day: (day_with_count name: (day_name))
    (menu (menu_items
      (menu_item (dish_with_count dish: (dish)))
      (menu_item (dish_with_count dish: (dish)))
      (menu_item (dish_with_count dish: (dish)))
      (menu_item (dish_with_count dish: (dish))))))
  (day_line
    day: (day_with_count name: (day_name))
    (menu (rest_day)))
  (day_line
    day: (day_with_count name: (day_name))
    (menu (rest_day))))
